--- a/vector-app/src/main/res/values/colors.xml
+++ b/vector-app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="launcher_background">#0DBD8B</color>
+    <color name="launcher_background">#1161fe</color>
 </resources>
