--- a/vector/src/main/res/drawable/ic_list_item_bullet.xml
+++ b/vector/src/main/res/drawable/ic_list_item_bullet.xml
@@ -8,13 +8,13 @@
       android:strokeWidth="2"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#0DBD8B"
+      android:strokeColor="#1161fe"
       android:strokeLineCap="square"/>
   <path
       android:pathData="M6.5454,12.8885L9.803,16.2428L17.4545,8.364"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#0DBD8B"
+      android:strokeColor="#1161fe"
       android:strokeLineCap="round"/>
 </vector>
