--- a/vector/src/main/res/layout/fragment_matrix_profile.xml
+++ b/vector/src/main/res/layout/fragment_matrix_profile.xml
@@ -69,11 +69,22 @@
                         tools:alpha="1"
                         tools:ignore="MissingConstraints" />
 
+                    <im.vector.app.core.ui.views.ShieldImageView
+                        android:id="@+id/communityRoomDecorationToolbarImageView"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintBottom_toBottomOf="@id/matrixProfileToolbarTitleView"
+                        app:layout_constraintEnd_toStartOf="@id/matrixProfileToolbarTitleView"
+                        app:layout_constraintHorizontal_chainStyle="packed"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/matrixProfileToolbarTitleView"/>
+
                     <TextView
                         android:id="@+id/matrixProfileToolbarTitleView"
-                        android:layout_width="0dp"
+                        android:layout_width="260dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
                         android:alpha="0"
                         android:ellipsize="end"
@@ -82,7 +93,8 @@
                         android:textColor="?vctr_content_primary"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/matrixProfileToolbarAvatarImageView"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toEndOf="@+id/communityRoomDecorationToolbarImageView"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:alpha="1"
                         tools:text="@sample/rooms.json/data/name" />
