--- a/vector/src/main/res/layout/view_room_detail_thread_toolbar.xml
+++ b/vector/src/main/res/layout/view_room_detail_thread_toolbar.xml
@@ -44,18 +44,32 @@
         app:layout_constraintCircleRadius="10dp"
         tools:ignore="MissingConstraints" />
 
+    <im.vector.app.core.ui.views.ShieldImageView
+        android:id="@+id/tokenGatedDecorationToolbarImageView"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="@id/roomToolbarThreadSubtitleTextView"
+        app:layout_constraintEnd_toStartOf="@id/roomToolbarThreadSubtitleTextView"
+        app:layout_constraintTop_toTopOf="@id/roomToolbarThreadSubtitleTextView"
+        app:layout_constraintVertical_bias="0.0"
+        tools:alpha="1"
+        tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/roomToolbarThreadSubtitleTextView"
         style="@style/Widget.Vector.TextView.Caption"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="28dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="?vctr_content_secondary"
         app:layout_constraintBottom_toBottomOf="@id/roomToolbarThreadImageView"
         app:layout_constraintStart_toEndOf="@id/roomToolbarThreadImageView"
         app:layout_constraintTop_toTopOf="@id/roomToolbarThreadImageView"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="@sample/rooms.json/data/name"
         tools:visibility="visible" />
 
