--- a/vector/src/main/res/layout/view_room_detail_toolbar.xml
+++ b/vector/src/main/res/layout/view_room_detail_toolbar.xml
@@ -79,6 +79,21 @@
         app:layout_constraintTop_toTopOf="@id/roomToolbarTitleView"
         tools:ignore="MissingConstraints" />
 
+    <im.vector.app.core.ui.views.ShieldImageView
+        android:id="@+id/tokenGatedDecorationToolbarImageView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintBottom_toBottomOf="@id/roomToolbarAvatarImageView"
+        app:layout_constraintStart_toStartOf="@id/imageGroupBarrier"
+        app:layout_constraintEnd_toStartOf="@id/roomToolbarTitleView"
+        app:layout_constraintTop_toTopOf="@id/roomToolbarAvatarImageView"
+        app:layout_constraintVertical_bias="0.0"
+        tools:alpha="1"
+        tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/roomToolbarTitleView"
         android:layout_width="0dp"
@@ -87,6 +102,7 @@
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.Vector.Widget.ActionBarTitle"
         app:layout_constraintBottom_toBottomOf="@id/roomToolbarAvatarImageView"
         app:layout_constraintEnd_toEndOf="parent"
